[gd_scene load_steps=5 format=2]

[ext_resource path="res://Toasts/fonts/poco/Poco.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Game/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 1 )

[node name="MainMenu" type="Control"]
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 512, 288 )
scale = Vector2( 18, 11 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = 192.0
margin_top = 72.0
margin_right = 896.0
margin_bottom = 320.0
custom_fonts/font = SubResource( 1 )
text = "Success Abuse
Epic Epietch Edition"
align = 1
valign = 1

[node name="Start" type="Button" parent="."]
margin_left = 448.0
margin_top = 352.0
margin_right = 640.0
margin_bottom = 416.0
text = "Lancer la partie"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="."]
margin_left = 448.0
margin_top = 448.0
margin_right = 640.0
margin_bottom = 512.0
text = "Quitter le jeu"

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
